kops/test-asm-todel/gateway-mutual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-mutual
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: httpbin-credential # must be the same as secret
      hosts:
        - 35.239.250.140.nip.io
